Исправление ошибок other

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           <img class="profile__avatar" src="./images/Kusto.jpg" alt="Аватарка пользователя." >
           <div class="profile__info">
             <div class="profile__edit">
-              <h1 class="profile__name overflowtext">Жак-Ив Кусто</h1>
+              <h1 class="profile__name overflow-text">Жак-Ив Кусто</h1>
               <button class="profile__edit-button" type="button" aria-label="Кнопка редактирования профиля."></button>
             </div>
-            <p class="profile__career overflowtext">Исследователь океана</p>
+            <p class="profile__career overflow-text">Исследователь океана</p>
           </div>
         </div>
         <button class="profile__add-button" type="button" aria-label="Кнопка добавления фото."></button>
@@ -28,42 +28,42 @@
         <article class="card">
           <img class="card__image" src=".//images/Dombaj.jpg" alt="Суровый осенний вид на горы Домбай вдоль хребта.">
           <div class="card__group">
-            <h2 class="card__title overflowtext">Домбай</h2>
+            <h2 class="card__title overflow-text">Домбай</h2>
             <button class="card__like-button" type="button" aria-label="иконка лайк"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src=".//images/Gora_Elbrus.jpg" alt="Увидеть на горизонте в закатном мареве силуэт горы Эльбрус.">
           <div class="card__group">
-            <h2 class="card__title overflowtext">Гора Эльбрус</h2>
+            <h2 class="card__title overflow-text">Гора Эльбрус</h2>
             <button class="card__like-button" type="button" aria-label="иконка лайк"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src=".//images/Karachaevsk.jpg" alt="Полуразрушенная церковь, на фоне склона гор в Карачаевске.">
           <div class="card__group">
-            <h2 class="card__title overflowtext">Карачаевск</h2>
+            <h2 class="card__title overflow-text">Карачаевск</h2>
             <button class="card__like-button" type="button" aria-label="иконка лайк"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src=".//images/Teletskoye_Lake.Altai.jpg" alt="Телецкое озеро на Алтае.">
           <div class="card__group">
-            <h2 class="card__title overflowtext">Телецкое озеро. Алтай</h2>
+            <h2 class="card__title overflow-text">Телецкое озеро. Алтай</h2>
             <button class="card__like-button" type="button" aria-label="иконка лайк"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src=".//images/Volga_River.jpg" alt="Вид на Волгу.">
           <div class="card__group">
-            <h2 class="card__title overflowtext">Река Волга</h2>
+            <h2 class="card__title overflow-text">Река Волга</h2>
             <button class="card__like-button" type="button" aria-label="иконка лайк"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src=".//images/Elbres_vershina.jpg" alt="Заснеженная часть горы Эльбрус.">
           <div class="card__group">
-            <h2 class="card__title overflowtext">Эльбрус</h2>
+            <h2 class="card__title overflow-text">Эльбрус</h2>
             <button class="card__like-button" type="button" aria-label="иконка лайк"></button>
           </div>
         </article>
@@ -76,13 +76,13 @@
       <div class="popup__container">
         <button class="popup__button-close" type="button" aria-label="закрыть форму"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form">
-          <input class="popup__name-field"   name="name"   type="text" placeholder="Жак-Ив Кусто"         required="">
-          <input class="popup__career-field"   name="career" type="text" placeholder="Исследователь океана" required="">
+        <form class="popup__form" name="main-form">
+          <input class="popup__input-field"   name="name-input"   type="text" placeholder="Жак-Ив Кусто"         required="">
+          <input class="popup__input-field"   name="career-input" type="text" placeholder="Исследователь океана" required="">
           <button class="popup__submit" type="submit" aria-label="Cохранить">Сохранить</button>
         </form>
       </div>
     </div>
-    <script src="./vendor/index.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
