--- a/index.html
+++ b/index.html
@@ -25,49 +25,7 @@
         <button class="profile__add-button" type="button" aria-label="Кнопка добавления фото."></button>
       </section>
       <section class="cards" aria-label="секция с фотографиями посещенных мест">
-        <!--<article class="card">
-          <img class="card__image" src=".//images/Dombaj.jpg" alt="Суровый осенний вид на горы Домбай вдоль хребта.">
-          <button class="card__trash-button" type="button" aria-label="Корзина"></button>
-          <div class="card__group">
-            <h2 class="card__title overflow-text">Домбай</h2>
-            <button class="card__like-button" type="button" aria-label="иконка лайк"></button>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card__image" src=".//images/Gora_Elbrus.jpg" alt="Увидеть на горизонте в закатном мареве силуэт горы Эльбрус.">
-          <div class="card__group">
-            <h2 class="card__title overflow-text">Гора Эльбрус</h2>
-            <button class="card__like-button" type="button" aria-label="иконка лайк"></button>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card__image" src=".//images/Karachaevsk.jpg" alt="Полуразрушенная церковь, на фоне склона гор в Карачаевске.">
-          <div class="card__group">
-            <h2 class="card__title overflow-text">Карачаевск</h2>
-            <button class="card__like-button" type="button" aria-label="иконка лайк"></button>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card__image" src=".//images/Teletskoye_Lake.Altai.jpg" alt="Телецкое озеро на Алтае.">
-          <div class="card__group">
-            <h2 class="card__title overflow-text">Телецкое озеро. Алтай</h2>
-            <button class="card__like-button" type="button" aria-label="иконка лайк"></button>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card__image" src=".//images/Volga_River.jpg" alt="Вид на Волгу.">
-          <div class="card__group">
-            <h2 class="card__title overflow-text">Река Волга</h2>
-            <button class="card__like-button" type="button" aria-label="иконка лайк"></button>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card__image" src=".//images/Elbres_vershina.jpg" alt="Заснеженная часть горы Эльбрус.">
-          <div class="card__group">
-            <h2 class="card__title overflow-text">Эльбрус</h2>
-            <button class="card__like-button" type="button" aria-label="иконка лайк"></button>
-          </div>
-        </article>-->
+
       </section>
     </main>
     <footer class="footer">
@@ -98,13 +56,13 @@
     <div class="popup popup_type_big-photo">
       <figure class="popup__container popup__container_type_big-photo">
         <button class="popup__button-close popup__button-close_type_big-photo" type="button" aria-label="Закрыть окно"></button>
-        <img  class="popup__big-size-photo" src=""  alt="">
+        <img  class="popup__big-size-photo" src="#"  alt="">
         <figcaption class="popup__big-size-title"></figcaption>
       </figure>
     </div>
     <template class="template-card">
       <article class="card">
-        <img class="card__image" src="" alt="">
+        <img class="card__image" src="#" alt="">
         <button class="card__trash-button" type="button" aria-label="Корзина"></button>
         <div class="card__group">
           <h2 class="card__title overflow-text"></h2>
