--- a/index.html
+++ b/index.html
@@ -35,10 +35,20 @@
       <div class="popup__container">
         <button class="popup__button-close" type="button" aria-label="закрыть форму"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" name="main-form-edit-profile">
-          <input class="popup__input-field"   name="name-input"   type="text" placeholder="Жак-Ив Кусто"         required="">
-          <input class="popup__input-field"   name="career-input" type="text" placeholder="Исследователь океана" required="">
-          <button class="popup__submit" type="submit" aria-label="Cохранить">Сохранить</button>
+        <form class="popup__form" name="main-form-edit-profile" novalidate>
+          <fieldset class="popup__set">
+            <label class="popup__label">
+              <input class="popup__input-field" name="name-input"   type="text" placeholder="Жак-Ив Кусто"
+                minlength="2" maxlength="40" required>
+              <span class="popup__input-error"></span>
+            </label>
+            <label class="popup__label">
+              <input class="popup__input-field" name="career-input" type="text" placeholder="Исследователь океана"
+                minlength="2" maxlength="200" required>
+              <span class="popup__input-error"></span>
+            </label>
+            <button class="popup__submit" type="submit" aria-label="Cохранить">Сохранить</button>
+          </fieldset>
         </form>
       </div>
     </div>
@@ -46,10 +56,19 @@
       <div class="popup__container">
         <button class="popup__button-close" type="button" aria-label="закрыть форму"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form" name="main-form-add-photo">
-          <input class="popup__input-field"   name="place-input"    type="text" placeholder="Назовите место"                required="">
-          <input class="popup__input-field"   name="urlImage-input" type="url"  placeholder="Вставьте ссылку на фото места" required="">
-          <button class="popup__submit" type="submit" aria-label="Сохранить карточку места">Создать</button>
+        <form class="popup__form" name="main-form-add-photo" novalidate>
+          <fieldset class="popup__set">
+            <label class="popup__label">
+              <input class="popup__input-field"   name="place-input"    type="text" placeholder="Назовите место"
+                minlength="2" maxlength="30" required>
+              <span class="popup__input-error"></span>
+            </label>
+            <label class="popup__label">
+              <input class="popup__input-field"   name="urlImage-input" type="url"  placeholder="Вставьте ссылку на фото места" required>
+              <span class="popup__input-error"></span>
+            </label>
+            <button class="popup__submit" type="submit" aria-label="Сохранить карточку места">Создать</button>
+          </fieldset>
         </form>
       </div>
     </div>
@@ -72,5 +91,6 @@
     </template>
     <script src="./scripts/cards.js"></script>
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
   </body>
 </html>
